# ModelDrift

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: retrain-model.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: database.py
backend/app/models/: alert.py  drift_metric.py  ground_truth.py  model_version.py  prediction.py  retraining_run.py
backend/app/schemas/: alert.py  drift.py  ground_truth.py  model_registry.py  prediction.py  retraining.py
backend/app/services/: alert_service.py  drift_service.py  github_actions_service.py  ground_truth_service.py  model_registry_service.py  prediction_service.py  retraining_service.py
backend/app/tasks/: retraining_tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AlertCard.jsx  DriftTable.jsx  MetricCard.jsx  ModelRegistryTable.jsx  RecentPredictions.jsx  RetrainingRunsTable.jsx  Sidebar.jsx  StatusBadge.jsx  Topbar.jsx
frontend/src/pages/: Alerts.jsx  DriftAnalysis.jsx  (+3 more)
ml/: README.md  compare_models.py  evaluate.py  retrain_model.py  train.py
ml/models/: .gitkeep
ml/sample_data/: README.md
scripts/: generate_demo_data.py  reset_demo_data.py  seed_demo_data.py  test_drift.py
sdk/: README.md  pyproject.toml
sdk/examples/: __init__.py  log_batch_predictions.py  log_ground_truth.py  log_single_prediction.py
sdk/modeldrift/: __init__.py  client.py
(+9 files in other folders)
