[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeldrift"
version = "0.1.0"
description = "Python SDK for logging ML predictions and ground truth labels to ModelDrift backend"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ModelDrift", email = "dev@modeldrift.local"},
]

dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Uttkarsh700/ModelDrift"
Repository = "https://github.com/Uttkarsh700/ModelDrift.git"

[tool.setuptools]
packages = ["modeldrift"]
